合并list， 链表有环， 回文链表， 反转链表，二叉树路径求和，二叉树深度高低